y.output
Terminals unused in grammar

   UMINUS


Rules useless in parser due to conflicts

   10 declaration: /* empty */

   62 arguments: arguments ',' expression
   63          | expression


State 4 conflicts: 7 shift/reduce, 6 reduce/reduce
State 43 conflicts: 2 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 6 shift/reduce
State 50 conflicts: 2 shift/reduce
State 51 conflicts: 2 shift/reduce
State 55 conflicts: 2 shift/reduce
State 57 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 64 conflicts: 1 shift/reduce, 16 reduce/reduce
State 84 conflicts: 1 shift/reduce, 2 reduce/reduce
State 86 conflicts: 1 shift/reduce, 15 reduce/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 16 reduce/reduce
State 90 conflicts: 16 reduce/reduce
State 91 conflicts: 16 reduce/reduce
State 92 conflicts: 16 reduce/reduce
State 93 conflicts: 16 reduce/reduce
State 94 conflicts: 16 reduce/reduce
State 95 conflicts: 16 reduce/reduce
State 96 conflicts: 16 reduce/reduce
State 97 conflicts: 16 reduce/reduce
State 98 conflicts: 16 reduce/reduce
State 99 conflicts: 16 reduce/reduce
State 100 conflicts: 16 reduce/reduce
State 109 conflicts: 1 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' declarations statements '}'

    3 declarations: declarations declaration
    4             | /* empty */

    5 statements: statements statement
    6           | /* empty */

    7 declaration: type ID ';'
    8            | type ID '=' expression ';'
    9            | CONST type ID '=' expression ';'
   10            | /* empty */

   11 statement: variable '=' expression ';'
   12          | IF '(' expression ')' statement else_statement
   13          | WHILE '(' expression ')' statement
   14          | scope
   15          | ';'

   16 else_statement: ELSE statement
   17               | /* empty */

   18 type: INT_T
   19     | IVEC_T
   20     | BOOL_T
   21     | BVEC_T
   22     | FLOAT_T
   23     | VEC_T

   24 expression: constructor
   25           | function
   26           | INT_C
   27           | FLOAT_C
   28           | variable
   29           | unary_op expression
   30           | expr1
   31           | TRUE_C
   32           | FALSE_C
   33           | '(' expression ')'

   34 variable: ID
   35         | ID '[' INT_C ']'

   36 unary_op: '!'
   37         | '-'

   38 expr1: expr2 OR expr2
   39      | expr2

   40 expr2: expr3 AND expr3
   41      | expr3

   42 expr3: expr4 EQ expr4
   43      | expr4 LEQ expr4
   44      | expr4 '<' expr4
   45      | expr4 GEQ expr4
   46      | expr4 '>' expr4
   47      | expr4 NEQ expr4
   48      | expr4

   49 expr4: term '+' term
   50      | term '-' term
   51      | term

   52 term: factor '*' factor
   53     | factor '/' factor
   54     | factor

   55 factor: expression '^' expression
   56       | expression

   57 constructor: type '(' arguments ')'

   58 function: function_name '(' arguments_opt ')'

   59 function_name: FUNC

   60 arguments_opt: arguments
   61              | /* empty */

   62 arguments: arguments ',' expression
   63          | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 36
'(' (40) 12 13 33 57 58
')' (41) 12 13 33 57 58
'*' (42) 52
'+' (43) 49
',' (44) 62
'-' (45) 37 50
'/' (47) 53
';' (59) 7 8 9 11 15
'<' (60) 44
'=' (61) 8 9 11
'>' (62) 46
'[' (91) 35
']' (93) 35
'^' (94) 55
'{' (123) 2
'}' (125) 2
error (256)
FLOAT_T (258) 22
INT_T (259) 18
BOOL_T (260) 20
CONST (261) 9
FALSE_C (262) 32
TRUE_C (263) 31
FUNC (264) 59
IF (265) 12
WHILE (266) 13
ELSE (267) 16
AND (268) 40
OR (269) 38
NEQ (270) 47
EQ (271) 42
LEQ (272) 43
GEQ (273) 45
VEC_T (274) 23
BVEC_T (275) 21
IVEC_T (276) 19
FLOAT_C (277) 27
INT_C (278) 26 35
ID (279) 7 8 9 34 35
UMINUS (280)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
scope (45)
    on left: 2, on right: 1 14
declarations (46)
    on left: 3 4, on right: 2 3
statements (47)
    on left: 5 6, on right: 2 5
declaration (48)
    on left: 7 8 9 10, on right: 3
statement (49)
    on left: 11 12 13 14 15, on right: 5 12 13 16
else_statement (50)
    on left: 16 17, on right: 12
type (51)
    on left: 18 19 20 21 22 23, on right: 7 8 9 57
expression (52)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 8 9 11 12 13
    29 33 55 56 62 63
variable (53)
    on left: 34 35, on right: 11 28
unary_op (54)
    on left: 36 37, on right: 29
expr1 (55)
    on left: 38 39, on right: 30
expr2 (56)
    on left: 40 41, on right: 38 39
expr3 (57)
    on left: 42 43 44 45 46 47 48, on right: 40 41
expr4 (58)
    on left: 49 50 51, on right: 42 43 44 45 46 47 48
term (59)
    on left: 52 53 54, on right: 49 50 51
factor (60)
    on left: 55 56, on right: 52 53 54
constructor (61)
    on left: 57, on right: 24
function (62)
    on left: 58, on right: 25
function_name (63)
    on left: 59, on right: 58
arguments_opt (64)
    on left: 60 61, on right: 58
arguments (65)
    on left: 62 63, on right: 57 60 62


state 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


state 1

    2 scope: '{' . declarations statements '}'

    $default  reduce using rule 4 (declarations)

    declarations  go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: scope .

    $default  reduce using rule 1 (program)


state 4

    2 scope: '{' declarations . statements '}'
    3 declarations: declarations . declaration

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    CONST    shift, and go to state 9
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    FLOAT_T   [reduce using rule 10 (declaration)]
    INT_T     [reduce using rule 10 (declaration)]
    BOOL_T    [reduce using rule 10 (declaration)]
    CONST     [reduce using rule 10 (declaration)]
    IF        reduce using rule 6 (statements)
    IF        [reduce using rule 10 (declaration)]
    WHILE     reduce using rule 6 (statements)
    WHILE     [reduce using rule 10 (declaration)]
    VEC_T     [reduce using rule 10 (declaration)]
    BVEC_T    [reduce using rule 10 (declaration)]
    IVEC_T    [reduce using rule 10 (declaration)]
    ID        reduce using rule 6 (statements)
    ID        [reduce using rule 10 (declaration)]
    '{'       reduce using rule 6 (statements)
    '{'       [reduce using rule 10 (declaration)]
    '}'       reduce using rule 6 (statements)
    '}'       [reduce using rule 10 (declaration)]
    ';'       reduce using rule 6 (statements)
    ';'       [reduce using rule 10 (declaration)]
    $default  reduce using rule 6 (statements)

    statements   go to state 13
    declaration  go to state 14
    type         go to state 15


state 5

    0 $accept: program $end .

    $default  accept


state 6

   22 type: FLOAT_T .

    $default  reduce using rule 22 (type)


state 7

   18 type: INT_T .

    $default  reduce using rule 18 (type)


state 8

   20 type: BOOL_T .

    $default  reduce using rule 20 (type)


state 9

    9 declaration: CONST . type ID '=' expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    type  go to state 16


state 10

   23 type: VEC_T .

    $default  reduce using rule 23 (type)


state 11

   21 type: BVEC_T .

    $default  reduce using rule 21 (type)


state 12

   19 type: IVEC_T .

    $default  reduce using rule 19 (type)


state 13

    2 scope: '{' declarations statements . '}'
    5 statements: statements . statement

    IF     shift, and go to state 17
    WHILE  shift, and go to state 18
    ID     shift, and go to state 19
    '{'    shift, and go to state 1
    '}'    shift, and go to state 20
    ';'    shift, and go to state 21

    scope      go to state 22
    statement  go to state 23
    variable   go to state 24


state 14

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


state 15

    7 declaration: type . ID ';'
    8            | type . ID '=' expression ';'

    ID  shift, and go to state 25


state 16

    9 declaration: CONST type . ID '=' expression ';'

    ID  shift, and go to state 26


state 17

   12 statement: IF . '(' expression ')' statement else_statement

    '('  shift, and go to state 27


state 18

   13 statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 28


state 19

   34 variable: ID .
   35         | ID . '[' INT_C ']'

    '['  shift, and go to state 29

    $default  reduce using rule 34 (variable)


state 20

    2 scope: '{' declarations statements '}' .

    $default  reduce using rule 2 (scope)


state 21

   15 statement: ';' .

    $default  reduce using rule 15 (statement)


state 22

   14 statement: scope .

    $default  reduce using rule 14 (statement)


state 23

    5 statements: statements statement .

    $default  reduce using rule 5 (statements)


state 24

   11 statement: variable . '=' expression ';'

    '='  shift, and go to state 30


state 25

    7 declaration: type ID . ';'
    8            | type ID . '=' expression ';'

    ';'  shift, and go to state 31
    '='  shift, and go to state 32


state 26

    9 declaration: CONST type ID . '=' expression ';'

    '='  shift, and go to state 33


state 27

   12 statement: IF '(' . expression ')' statement else_statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 43
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 28

   13 statement: WHILE '(' . expression ')' statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 55
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 29

   35 variable: ID '[' . INT_C ']'

    INT_C  shift, and go to state 56


state 30

   11 statement: variable '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 57
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 31

    7 declaration: type ID ';' .

    $default  reduce using rule 7 (declaration)


state 32

    8 declaration: type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 58
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 33

    9 declaration: CONST type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 59
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 34

   32 expression: FALSE_C .

    $default  reduce using rule 32 (expression)


state 35

   31 expression: TRUE_C .

    $default  reduce using rule 31 (expression)


state 36

   59 function_name: FUNC .

    $default  reduce using rule 59 (function_name)


state 37

   27 expression: FLOAT_C .

    $default  reduce using rule 27 (expression)


state 38

   26 expression: INT_C .

    $default  reduce using rule 26 (expression)


state 39

   37 unary_op: '-' .

    $default  reduce using rule 37 (unary_op)


state 40

   36 unary_op: '!' .

    $default  reduce using rule 36 (unary_op)


state 41

   33 expression: '(' . expression ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 60
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 42

   57 constructor: type . '(' arguments ')'

    '('  shift, and go to state 61


state 43

   12 statement: IF '(' expression . ')' statement else_statement
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ')'  shift, and go to state 63

    '^'       [reduce using rule 56 (factor)]
    ')'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 44

   28 expression: variable .

    $default  reduce using rule 28 (expression)


state 45

   29 expression: unary_op . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 64
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 46

   30 expression: expr1 .

    $default  reduce using rule 30 (expression)


state 47

   38 expr1: expr2 . OR expr2
   39      | expr2 .

    OR  shift, and go to state 65

    OR        [reduce using rule 39 (expr1)]
    $default  reduce using rule 39 (expr1)


state 48

   40 expr2: expr3 . AND expr3
   41      | expr3 .

    AND  shift, and go to state 66

    AND       [reduce using rule 41 (expr2)]
    $default  reduce using rule 41 (expr2)


state 49

   42 expr3: expr4 . EQ expr4
   43      | expr4 . LEQ expr4
   44      | expr4 . '<' expr4
   45      | expr4 . GEQ expr4
   46      | expr4 . '>' expr4
   47      | expr4 . NEQ expr4
   48      | expr4 .

    NEQ  shift, and go to state 67
    EQ   shift, and go to state 68
    LEQ  shift, and go to state 69
    GEQ  shift, and go to state 70
    '<'  shift, and go to state 71
    '>'  shift, and go to state 72

    NEQ       [reduce using rule 48 (expr3)]
    EQ        [reduce using rule 48 (expr3)]
    LEQ       [reduce using rule 48 (expr3)]
    GEQ       [reduce using rule 48 (expr3)]
    '<'       [reduce using rule 48 (expr3)]
    '>'       [reduce using rule 48 (expr3)]
    $default  reduce using rule 48 (expr3)


state 50

   49 expr4: term . '+' term
   50      | term . '-' term
   51      | term .

    '+'  shift, and go to state 73
    '-'  shift, and go to state 74

    '+'       [reduce using rule 51 (expr4)]
    '-'       [reduce using rule 51 (expr4)]
    $default  reduce using rule 51 (expr4)


state 51

   52 term: factor . '*' factor
   53     | factor . '/' factor
   54     | factor .

    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    '*'       [reduce using rule 54 (term)]
    '/'       [reduce using rule 54 (term)]
    $default  reduce using rule 54 (term)


state 52

   24 expression: constructor .

    $default  reduce using rule 24 (expression)


state 53

   25 expression: function .

    $default  reduce using rule 25 (expression)


state 54

   58 function: function_name . '(' arguments_opt ')'

    '('  shift, and go to state 77


state 55

   13 statement: WHILE '(' expression . ')' statement
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ')'  shift, and go to state 78

    '^'       [reduce using rule 56 (factor)]
    ')'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 56

   35 variable: ID '[' INT_C . ']'

    ']'  shift, and go to state 79


state 57

   11 statement: variable '=' expression . ';'
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ';'  shift, and go to state 80

    '^'       [reduce using rule 56 (factor)]
    ';'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 58

    8 declaration: type ID '=' expression . ';'
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ';'  shift, and go to state 81

    '^'       [reduce using rule 56 (factor)]
    ';'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 59

    9 declaration: CONST type ID '=' expression . ';'
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ';'  shift, and go to state 82

    '^'       [reduce using rule 56 (factor)]
    ';'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 60

   33 expression: '(' expression . ')'
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62
    ')'  shift, and go to state 83

    '^'       [reduce using rule 56 (factor)]
    ')'       [reduce using rule 56 (factor)]
    $default  reduce using rule 56 (factor)


state 61

   57 constructor: type '(' . arguments ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 84
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54
    arguments      go to state 85


state 62

   55 factor: expression '^' . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 86
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 63

   12 statement: IF '(' expression ')' . statement else_statement

    IF     shift, and go to state 17
    WHILE  shift, and go to state 18
    ID     shift, and go to state 19
    '{'    shift, and go to state 1
    ';'    shift, and go to state 21

    scope      go to state 22
    statement  go to state 87
    variable   go to state 24


state 64

   29 expression: unary_op expression .
   55 factor: expression . '^' expression
   56       | expression .

    '^'  shift, and go to state 62

    AND       reduce using rule 29 (expression)
    AND       [reduce using rule 56 (factor)]
    OR        reduce using rule 29 (expression)
    OR        [reduce using rule 56 (factor)]
    NEQ       reduce using rule 29 (expression)
    NEQ       [reduce using rule 56 (factor)]
    EQ        reduce using rule 29 (expression)
    EQ        [reduce using rule 56 (factor)]
    LEQ       reduce using rule 29 (expression)
    LEQ       [reduce using rule 56 (factor)]
    GEQ       reduce using rule 29 (expression)
    GEQ       [reduce using rule 56 (factor)]
    '<'       reduce using rule 29 (expression)
    '<'       [reduce using rule 56 (factor)]
    '>'       reduce using rule 29 (expression)
    '>'       [reduce using rule 56 (factor)]
    '+'       reduce using rule 29 (expression)
    '+'       [reduce using rule 56 (factor)]
    '-'       reduce using rule 29 (expression)
    '-'       [reduce using rule 56 (factor)]
    '*'       reduce using rule 29 (expression)
    '*'       [reduce using rule 56 (factor)]
    '/'       reduce using rule 29 (expression)
    '/'       [reduce using rule 56 (factor)]
    '^'       [reduce using rule 29 (expression)]
    '^'       [reduce using rule 56 (factor)]
    ';'       reduce using rule 29 (expression)
    ';'       [reduce using rule 56 (factor)]
    ')'       reduce using rule 29 (expression)
    ')'       [reduce using rule 56 (factor)]
    ','       reduce using rule 29 (expression)
    ','       [reduce using rule 56 (factor)]
    $default  reduce using rule 29 (expression)


state 65

   38 expr1: expr2 OR . expr2

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 89
    expr3          go to state 48
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 66

   40 expr2: expr3 AND . expr3

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 90
    expr4          go to state 49
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 67

   47 expr3: expr4 NEQ . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 91
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 68

   42 expr3: expr4 EQ . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 92
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 69

   43 expr3: expr4 LEQ . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 93
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 70

   45 expr3: expr4 GEQ . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 94
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 71

   44 expr3: expr4 '<' . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 95
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 72

   46 expr3: expr4 '>' . expr4

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 88
    variable       go to state 44
    unary_op       go to state 45
    expr1          go to state 46
    expr2          go to state 47
    expr3          go to state 48
    expr4          go to state 96
    term           go to state 50
    factor         go to state 51
    constructor    go to state 52
    function       go to state 53
    function_name  go to state 54


state 73

   49 expr4: term '+' . term
